update Bali page and added moizes mobile friendly to France page

--- a/bali.html
+++ b/bali.html
@@ -329,19 +329,19 @@
             </div>
             <div class ="do-places-img">
                 <div class = "place">
-                    <img src="images/bali/tanahlot.jpeg" alt="Tanah Lot">
+                    <img src="images/bali/tanahlot.jpeg" alt="Tanah Lot"><br>
                     <p>Tanah Lot</p>
                     <p>4 stars</p><br>
                     <p>Religious Sites, Landmarks</p>
                 </div>
                 <div class = "place">
-                    <img src="images/bali/purabratan.jpg" alt="Pura Bratan">
+                    <img src="images/bali/purabratan.jpg" alt="Pura Bratan"><br>
                     <p>Pura Bratan</p>
                     <p>5 stars</p><br>
                     <p>Religious Sites, Landmarks</p>
                 </div>
                 <div class = "place">
-                    <img src="images/bali/kelingking.jpg" alt="kelingking Beach">
+                    <img src="images/bali/kelingking.jpg" alt="kelingking Beach"><br>
                     <p>Kelingking Beach</p>
                     <p>5 stars</p><br>
                     <p>Beaches</p>
@@ -356,19 +356,19 @@
             </div>
             <div class ="eat-places-img">
                 <div class = "eat-place">
-                    <img src="images/bali/sunsunwarung.jpg" alt="Sun Sun Warung">
+                    <img src="images/bali/sunsunwarung.jpg" alt="Sun Sun Warung"><br>
                     <p>Sun Sun Warung</p>
                     <p>5 stars</p><br>
                     <p>Healthy, Grill</p>
                 </div>
                 <div class = "eat-place">
-                    <img src="images/bali/tanahliat.jpg" alt="Tanah Liat">
+                    <img src="images/bali/tanahliat.jpg" alt="Tanah Liat"><br>
                     <p>Tanah Liat</p>
                     <p>5 stars</p><br>
                     <p>Fine Dining</p>
                 </div>
                 <div class = "eat-place">
-                    <img src="images/bali/kaukau.jpg" alt="Kau Kau">
+                    <img src="images/bali/kaukau.jpg" alt="Kau Kau"><br>
                     <p>Kau Kau</p>
                     <p>4 stars</p><br>
                     <p>Fusion, Seafood</p>
