--- a/france.html
+++ b/france.html
@@ -216,9 +216,13 @@
     }
 
     @media screen and (max-width: 600px) {
+
         .explore-france-section {
-            padding: 20px;
+            padding: 0px;
             text-align: center;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
 
         .explore-france-section img {
@@ -229,6 +233,55 @@
         .france-essentials-section {
             padding: 20px;
             text-align: center;
+        }
+
+        .what-to-do-section {
+            flex-direction: column;
+        }
+
+        .do-places-text {
+            max-width: 100%;
+        }
+
+        .do-places-text h4, .eat-places-text h4 {
+            margin: 0;
+        }
+
+        .do-places-img {
+            flex-direction: column;
+            margin-left: 0;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .what-to-eat-section {
+            flex-direction: column;
+            margin-top: 50px;
+        }
+
+        .eat-places-text {
+            max-width: 100%;
+        }
+
+        .eat-places-img {
+            flex-direction: column;
+            margin-left: 0;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .destinations-section {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+            padding: 20px;
+        }
+
+        .all-destinations {
+            flex-direction: column;
+            width: 300px;
         }
     }
     </style>
@@ -279,19 +332,19 @@
             </div>
             <div class ="do-places-img">
                 <div class = "place">
-                    <img src="images/france/eiffeltower.jpg" alt="Eiffel Tower">
+                    <img src="images/france/eiffeltower.jpg" alt="Eiffel Tower"><br>
                     <p>Eiffel Tower</p>
                     <p>5 stars</p><br>
                     <p>Landmarks</p>
                 </div>
                 <div class = "place">
-                    <img src="images/france/museedorsay.jpg" alt="Musée d'Orsay">
+                    <img src="images/france/museedorsay.jpg" alt="Musée d'Orsay"><br>
                     <p>Musée d'Orsay</p>
                     <p>5 stars</p><br>
                     <p>Landmarks, Museum</p>
                 </div>
                 <div class = "place">
-                    <img src="images/france/louvre.jpg" alt="Louvre">
+                    <img src="images/france/louvre.jpg" alt="Louvre"><br>
                     <p>Louvre</p>
                     <p>5 stars</p><br>
                     <p>Landmarks, Museum</p>
@@ -306,19 +359,19 @@
             </div>
             <div class ="eat-places-img">
                 <div class = "eat-place">
-                    <img src="images/france/lerelais.jpg" alt="Le relais de l'entrecote">
+                    <img src="images/france/lerelais.jpg" alt="Le relais de l'entrecote"><br>
                     <p>Le relais de l'entrecote</p>
                     <p>5 stars</p><br>
                     <p>French</p>
                 </div>
                 <div class = "eat-place">
-                    <img src="images/france/feuillette.jpg" alt="Boulangerie Feuillette">
+                    <img src="images/france/feuillette.jpg" alt="Boulangerie Feuillette"><br>
                     <p>Boulangerie Feuillette</p>
                     <p>5 stars</p><br>
                     <p>Bakery</p>
                 </div>
                 <div class = "eat-place">
-                    <img src="images/france/le428.jpg" alt="Le 428">
+                    <img src="images/france/le428.jpg" alt="Le 428"><br>
                     <p>Le 428</p>
                     <p>4 stars</p><br>
                     <p>French</p>
