--- a/sign-up.html
+++ b/sign-up.html
@@ -48,6 +48,43 @@
         });
     </script>
     <style>
+            footer {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+    }
+
+    .subscribe-container {
+        margin-left: 0;
+    }
+
+    .form-container {
+        flex-direction: column;
+        gap: 15px;
+    }
+
+    .email-input {
+        text-align: center;
+    }
+
+    .logo-small {
+        width: 30%;
+        margin: 0;
+        margin-top: 30px;
+    }
+
+    .page-links {
+        margin: 0;
+        align-items: center;
+        margin-top: 30px
+    }
+
+    .copyright {
+        margin-left: 0;
+        margin-top: 10px;
+    }
+}
                 .content {
             display: flex;
             padding: 20px;
