--- a/france.html
+++ b/france.html
@@ -164,6 +164,7 @@
         max-width: 100%;
         height: 250px;
         border-radius: 30px 30px 0px 0px;
+        object-fit: cover;
     }
 
     .destinations-section{
