--- a/iceland.html
+++ b/iceland.html
@@ -39,6 +39,7 @@
     .explore-iceland-section p{
         margin-bottom: 50px;
         font-size: 18px;
+        color: #6C6C6C;
         width: 80%;
     }
 
@@ -64,6 +65,7 @@
     .do-places-text{
         flex: 1; 
         max-width: 30%;
+        color: #6C6C6C;
     }
 
     .do-places-img{
