updated styling of country pages to make consistent

--- a/iceland.html
+++ b/iceland.html
@@ -51,7 +51,7 @@
         padding: 50px 100px 25px 100px;
     }
 
-    .-essentials-section h2{
+    .iceland-essentials-section h2{
         color: #F76A09;
         font-family: Volkhov;
         font-size: 30px;
@@ -60,12 +60,12 @@
 
     .what-to-do-section{
         display: flex;
+        color: #6C6C6C;
     }
 
     .do-places-text{
         flex: 1; 
         max-width: 30%;
-        color: #6C6C6C;
     }
 
     .do-places-img{
@@ -119,6 +119,7 @@
     .what-to-eat-section{
         display: flex;
         margin-top: 100px;
+        color: #6C6C6C;
     }
 
     .eat-places-text{
@@ -158,7 +159,7 @@
                     0px 51.234px 33.893px 0px rgba(0, 0, 0, 0.01),
                     0px 86.212px 62.319px 0px rgba(0, 0, 0, 0.02),
                     0px 133.012px 106.41px 0px rgba(0, 0, 0, 0.02);
-                    object-fit: cover;
+        object-fit: cover;
     }
 
     .eat-place p{
