--- a/italy.html
+++ b/italy.html
@@ -26,6 +26,7 @@
     <style>
     .explore-italy-section{
         padding: 50px 100px 25px 100px;
+        color: #6C6C6C;
     }
 
     .explore-italy-section h1{
@@ -50,7 +51,7 @@
         padding: 50px 100px 25px 100px;
     }
 
-    .-essentials-section h2{
+    .italy-essentials-section h2{
         color: #F76A09;
         font-family: Volkhov;
         font-size: 30px;
@@ -59,6 +60,7 @@
 
     .what-to-do-section{
         display: flex;
+        color: #6C6C6C;
     }
 
     .do-places-text{
@@ -117,6 +119,7 @@
     .what-to-eat-section{
         display: flex;
         margin-top: 100px;
+        color: #6C6C6C;
     }
 
     .eat-places-text{
