--- a/france.html
+++ b/france.html
@@ -26,6 +26,7 @@
     <style>
     .explore-france-section{
         padding: 50px 100px 25px 100px;
+        color: #6C6C6C;
     }
 
     .explore-france-section h1{
@@ -59,6 +60,7 @@
 
     .what-to-do-section{
         display: flex;
+        color: #6C6C6C;
     }
 
     .do-places-text{
@@ -72,6 +74,7 @@
         margin-left: 50px;
         gap: 20px;
         justify-content: center;
+        object-fit: cover;
     }
 
     .do-places-text h2{
@@ -97,6 +100,7 @@
                     0px 51.234px 33.893px 0px rgba(0, 0, 0, 0.01),
                     0px 86.212px 62.319px 0px rgba(0, 0, 0, 0.02),
                     0px 133.012px 106.41px 0px rgba(0, 0, 0, 0.02);
+        object-fit: cover;
     }
 
     .place p{
@@ -109,11 +113,13 @@
         max-width: 100%;
         height: 250px;
         border-radius: 30px 30px 0px 0px;
+        object-fit: cover;
     }
 
     .what-to-eat-section{
         display: flex;
         margin-top: 100px;
+        color: #6C6C6C;
     }
 
     .eat-places-text{
@@ -127,6 +133,7 @@
         margin-left: 50px;
         gap: 20px;
         justify-content: center;
+        object-fit: cover;
     }
 
     .eat-places-text h2{
@@ -152,6 +159,7 @@
                     0px 51.234px 33.893px 0px rgba(0, 0, 0, 0.01),
                     0px 86.212px 62.319px 0px rgba(0, 0, 0, 0.02),
                     0px 133.012px 106.41px 0px rgba(0, 0, 0, 0.02);
+        object-fit: cover;
     }
 
     .eat-place p{
