--- a/budget-hacks.html
+++ b/budget-hacks.html
@@ -7,6 +7,25 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:400,500,700&display=swap">
     <link rel="stylesheet" href="styles.css">
     <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
+    <script> 
+                document.addEventListener('DOMContentLoaded', function () {
+        const subscribeButton = document.querySelector('.subscribe-button');
+        const emailInput = document.querySelector('.email-input');
+
+        subscribeButton.addEventListener('click', function () {
+            // Email validation using regular expression
+            const emailPattern = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
+            const isEmailValid = emailPattern.test(emailInput.value);
+
+            if (!isEmailValid) {
+                alert('Please enter a valid email address.');
+            } else {
+                alert('Thank you for subscribing to our newsletter!');
+                emailInput.value = ''; // Clear the email input
+            }
+        });
+    });
+    </script>
     <style>
         .content {
             display: flex;
@@ -417,6 +436,7 @@
         menuButton.addEventListener('click', function () {
             this.classList.toggle('active');
         });
+        
     </script>
 </body>
 </html>
