--- a/italy.html
+++ b/italy.html
@@ -367,19 +367,19 @@
             <div class="eat-places-img">
                 <div class="eat-place">
                     <img src="pizza.jpg" width="100%"; height="100%" alt="Authentic Italian Pizza"><br>
-                    <p>Authentic Italian Pizza</p>
+                    <p>Orma Roma</p>
                     <p>5 stars</p><br>
                     <p>Italian</p>
                 </div>
                 <div class="eat-place">
                     <img src="gelato.jpg" width="100%"; height="100%" alt="Gelato"><br>
-                    <p>Gelato</p>
+                    <p>Gelato San Lorenzo</p>
                     <p>5 stars</p><br>
                     <p>Dessert</p>
                 </div>
                 <div class="eat-place">
                     <img src="risotto.jpg"width="100%"; height="100%" alt="Risotto"><br>
-                    <p>Risotto</p>
+                    <p>Ratanà</p>
                     <p>4 stars</p><br>
                     <p>Italian</p>
                 </div>
