--- a/iceland.html
+++ b/iceland.html
@@ -218,15 +218,15 @@
     }
 
     .destination:nth-child(2) {
-    background: url('gullfoss.jpg') center/cover;
+    background: url('iceland2.jpg') center/cover;
     }
 
     .destination:nth-child(3) {
-    background: url('jokulsarlon.jpg') center/cover;
+    background: url('iceland3.jpg') center/cover;
     }
 
     .destination:nth-child(4) {
-    background: url('nationalpark2.jpg') center/cover;
+    background: url('iceland4.jpg') center/cover;
     }
 
     @media screen and (max-width: 600px) {
@@ -366,22 +366,22 @@
                 </div>
                 <div class="eat-places-img">
                     <div class="eat-place">
-                        <img src="yogurt.jpg" object-fit="cover" alt="Skyr"><br>
-                        <p>Skyr</p>
+                        <img src="laprima.jpg" object-fit="cover" alt="Skyr"><br>
+                        <p>La Primavera Ristorante</p>
                         <p>5 stars</p><br>
-                        <p>Dairy</p>
+                        <p>Northern Italian</p>
                     </div>
                     <div class="eat-place">
-                        <img src="lamb.jpg" alt="Icelandic Lamb"><br>
-                        <p>Icelandic Lamb</p>
+                        <img src=".jpg" alt="Icelandic Lamb"><br>
+                        <p>Brut</p>
                         <p>4 stars</p><br>
-                        <p>Meat</p>
+                        <p>Sea food</p>
                     </div>
                     <div class="eat-place">
-                        <img src="bread.jpg" alt="Rúgbrauð"><br>
-                        <p>Rúgbrauð</p>
+                        <img src="brut.jpg" alt="Rúgbrauð"><br>
+                        <p>Tide</p>
                         <p>4 stars</p><br>
-                        <p>Bread</p>
+                        <p>International</p>
                     </div>
                 </div>
             </div>
@@ -397,17 +397,17 @@
                 </div>
                 <div class="destination">
                     <div class="destination-content">
-                        <h4>Gullfoss Waterfall</h4>
+                        <h4>Akureyri</h4>
                     </div>
                 </div>
                 <div class="destination">
                     <div class="destination-content">
-                        <h4>Jokulsarlon Glacier Lagoon</h4>
+                        <h4>Hafnarfjörður</h4>
                     </div>
                 </div>
                 <div class="destination">
                     <div class="destination-content">
-                        <h4>National Park Þingvellir</h4>
+                        <h4>Húsavík</h4>
                     </div>
                 </div>
             </div>
