--- a/iceland.html
+++ b/iceland.html
@@ -214,19 +214,19 @@
     }
     
     .destination:nth-child(1) {
-    background: url('reykjavik.jpg') center/cover;
+    background: url('/images/reykjavik.jpg') center/cover;
     }
 
     .destination:nth-child(2) {
-    background: url('iceland2.jpg') center/cover;
+    background: url('images/iceland2.jpg') center/cover;
     }
 
     .destination:nth-child(3) {
-    background: url('iceland3.jpg') center/cover;
+    background: url('images/iceland3.jpg') center/cover;
     }
 
     .destination:nth-child(4) {
-    background: url('iceland4.jpg') center/cover;
+    background: url('images/iceland4.jpg') center/cover;
     }
 
     @media screen and (max-width: 600px) {
