--- a/iceland.html
+++ b/iceland.html
@@ -214,7 +214,7 @@
     }
     
     .destination:nth-child(1) {
-    background: url('/images/reykjavik.jpg') center/cover;
+    background: url('reykjavik.jpg') center/cover;
     }
 
     .destination:nth-child(2) {
@@ -378,7 +378,7 @@
                         <p>Sea food</p>
                     </div>
                     <div class="eat-place">
-                        <img src="/images/tide.jpg" alt="Rúgbrauð"><br>
+                        <img src="/images/tides.jpg" alt="Rúgbrauð"><br>
                         <p>Tide</p>
                         <p>4 stars</p><br>
                         <p>International</p>
