--- a/iceland.html
+++ b/iceland.html
@@ -366,13 +366,13 @@
                 </div>
                 <div class="eat-places-img">
                     <div class="eat-place">
-                        <img src="/images/laprima.jpg" object-fit="cover" alt="Skyr"><br>
+                        <img src="images/laprima.jpg" object-fit="cover" alt="Skyr"><br>
                         <p>La Primavera Ristorante</p>
                         <p>5 stars</p><br>
                         <p>Northern Italian</p>
                     </div>
                     <div class="eat-place">
-                        <img src="/images/brut.jpg" alt="Icelandic Lamb"><br>
+                        <img src="images/brut.jpg" alt="Icelandic Lamb"><br>
                         <p>Brut</p>
                         <p>4 stars</p><br>
                         <p>Sea food</p>
