--- a/iceland.html
+++ b/iceland.html
@@ -378,7 +378,7 @@
                         <p>Sea food</p>
                     </div>
                     <div class="eat-place">
-                        <img src="/images/tides.jpg" alt="Rúgbrauð"><br>
+                        <img src="images/tides.jpg" alt="Rúgbrauð"><br>
                         <p>Tide</p>
                         <p>4 stars</p><br>
                         <p>International</p>
