updated format and styling of country pages

--- a/bali.html
+++ b/bali.html
@@ -202,6 +202,15 @@
         height: 300px;
     }
 
+    .destination h4{
+            box-shadow: 0px 2.463px 4.187px 0px rgba(0, 0, 0, 0.00),
+                    0px 10.838px 8.67px 0px rgba(0, 0, 0, 0.01),
+                    0px 26.602px 17.292px 0px rgba(0, 0, 0, 0.01),
+                    0px 51.234px 33.893px 0px rgba(0, 0, 0, 0.01),
+                    0px 86.212px 62.319px 0px rgba(0, 0, 0, 0.02),
+                    0px 133.012px 106.41px 0px rgba(0, 0, 0, 0.02);
+    }
+
     .destination-content{
         align-self: flex-end;
         margin-left: 30px;
@@ -293,6 +302,15 @@
             flex-direction: column;
             width: 300px;
         }
+
+        .all-destinations h4{
+            box-shadow: 0px 2.463px 4.187px 0px rgba(0, 0, 0, 0.00),
+                    0px 10.838px 8.67px 0px rgba(0, 0, 0, 0.01),
+                    0px 26.602px 17.292px 0px rgba(0, 0, 0, 0.01),
+                    0px 51.234px 33.893px 0px rgba(0, 0, 0, 0.01),
+                    0px 86.212px 62.319px 0px rgba(0, 0, 0, 0.02),
+                    0px 133.012px 106.41px 0px rgba(0, 0, 0, 0.02);
+        }
     }
     </style>
 </head>
@@ -341,19 +359,19 @@
             <div class ="do-places-img">
                 <div class = "place">
                     <img src="images/bali/tanahlot.jpeg" alt="Tanah Lot"><br>
-                    <p>Tanah Lot</p>
+                    <p>Tanah Lot</p><br>
                     <p>4 stars</p><br>
                     <p>Religious Sites, Landmarks</p>
                 </div>
                 <div class = "place">
                     <img src="images/bali/purabratan.jpg" alt="Pura Bratan"><br>
-                    <p>Pura Bratan</p>
+                    <p>Pura Bratan</p><br>
                     <p>5 stars</p><br>
                     <p>Religious Sites, Landmarks</p>
                 </div>
                 <div class = "place">
                     <img src="images/bali/kelingking.jpg" alt="kelingking Beach"><br>
-                    <p>Kelingking Beach</p>
+                    <p>Kelingking Beach</p><br>
                     <p>5 stars</p><br>
                     <p>Beaches</p>
                 </div>
@@ -368,19 +386,19 @@
             <div class ="eat-places-img">
                 <div class = "eat-place">
                     <img src="images/bali/sunsunwarung.jpg" alt="Sun Sun Warung"><br>
-                    <p>Sun Sun Warung</p>
+                    <p>Sun Sun Warung</p><br>
                     <p>5 stars</p><br>
                     <p>Healthy, Grill</p>
                 </div>
                 <div class = "eat-place">
                     <img src="images/bali/tanahliat.jpg" alt="Tanah Liat"><br>
-                    <p>Tanah Liat</p>
+                    <p>Tanah Liat</p><br>
                     <p>5 stars</p><br>
                     <p>Fine Dining</p>
                 </div>
                 <div class = "eat-place">
                     <img src="images/bali/kaukau.jpg" alt="Kau Kau"><br>
-                    <p>Kau Kau</p>
+                    <p>Kau Kau</p><br>
                     <p>4 stars</p><br>
                     <p>Fusion, Seafood</p>
                 </div>
