--- a/canada.html
+++ b/canada.html
@@ -199,6 +199,15 @@
         height: 300px;
     }
 
+    .destination h4{
+            box-shadow: 0px 2.463px 4.187px 0px rgba(0, 0, 0, 0.00),
+                    0px 10.838px 8.67px 0px rgba(0, 0, 0, 0.01),
+                    0px 26.602px 17.292px 0px rgba(0, 0, 0, 0.01),
+                    0px 51.234px 33.893px 0px rgba(0, 0, 0, 0.01),
+                    0px 86.212px 62.319px 0px rgba(0, 0, 0, 0.02),
+                    0px 133.012px 106.41px 0px rgba(0, 0, 0, 0.02);
+    }
+
     .destination-content{
         align-self: flex-end;
         margin-left: 30px;
@@ -342,19 +351,19 @@
             <div class ="do-places-img">
                 <div class = "place">
                     <img src="images/canada/niagarafalls.jpg" alt="Niagara Falls"><br>
-                    <p>Niagara Falls</p>
+                    <p>Niagara Falls</p><br>
                     <p>4 stars</p><br>
                     <p>Nature</p>
                 </div>
                 <div class = "place">
                     <img src="images/canada/stanleypark.jpg" alt="Stanley Park"><br>
-                    <p>Stanley Park</p>
+                    <p>Stanley Park</p><br>
                     <p>4 stars</p><br>
                     <p>Parks</p>
                 </div>
                 <div class = "place">
                     <img src="images/canada/notreedame.jpg" alt="Notre-Dame Basilica"><br>
-                    <p>Notre-Dame Basilica</p>
+                    <p>Notre-Dame Basilica</p><br>
                     <p>5 stars</p><br>
                     <p>Churches & Cathedrals, Landmarks</p>
                 </div>
@@ -369,19 +378,19 @@
             <div class ="eat-places-img">
                 <div class = "eat-place">
                     <img src="images/canada/kitchentoronto.jpg" alt="Kitchen Toronto"><br>
-                    <p>Kitchen Toronto</p>
+                    <p>Kitchen Toronto</p><br>
                     <p>5 stars</p><br>
                     <p>Healthy</p>
                 </div>
                 <div class = "eat-place">
                     <img src="images/canada/sap.jpg" alt="Sap"><br>
-                    <p>Sap</p>
+                    <p>Sap</p><br>
                     <p>4 stars</p><br>
                     <p>Bakery</p>
                 </div>
                 <div class = "eat-place">
                     <img src="images/canada/moxies.jpg" alt="Moxies"><br>
-                    <p>Moxies</p>
+                    <p>Moxies</p><br>
                     <p>5 stars</p><br>
                     <p>Mexican</p>
                 </div>
