--- a/france.html
+++ b/france.html
@@ -204,6 +204,15 @@
         height: 300px;
     }
 
+    .destination h4{
+            box-shadow: 0px 2.463px 4.187px 0px rgba(0, 0, 0, 0.00),
+                    0px 10.838px 8.67px 0px rgba(0, 0, 0, 0.01),
+                    0px 26.602px 17.292px 0px rgba(0, 0, 0, 0.01),
+                    0px 51.234px 33.893px 0px rgba(0, 0, 0, 0.01),
+                    0px 86.212px 62.319px 0px rgba(0, 0, 0, 0.02),
+                    0px 133.012px 106.41px 0px rgba(0, 0, 0, 0.02);
+    }
+
     .destination-content{
         align-self: flex-end;
         margin-left: 30px;
@@ -346,19 +355,19 @@
             <div class ="do-places-img">
                 <div class = "place">
                     <img src="images/france/eiffeltower.jpg" alt="Eiffel Tower"><br>
-                    <p>Eiffel Tower</p>
+                    <p>Eiffel Tower</p><br>
                     <p>5 stars</p><br>
                     <p>Landmarks</p>
                 </div>
                 <div class = "place">
                     <img src="images/france/museedorsay.jpg" alt="Musée d'Orsay"><br>
-                    <p>Musée d'Orsay</p>
+                    <p>Musée d'Orsay</p><br>
                     <p>5 stars</p><br>
                     <p>Landmarks, Museum</p>
                 </div>
                 <div class = "place">
                     <img src="images/france/louvre.jpg" alt="Louvre"><br>
-                    <p>Louvre</p>
+                    <p>Louvre</p><br>
                     <p>5 stars</p><br>
                     <p>Landmarks, Museum</p>
                 </div>
@@ -373,19 +382,19 @@
             <div class ="eat-places-img">
                 <div class = "eat-place">
                     <img src="images/france/lerelais.jpg" alt="Le relais de l'entrecote"><br>
-                    <p>Le relais de l'entrecote</p>
+                    <p>Le relais de l'entrecote</p><br>
                     <p>5 stars</p><br>
                     <p>French</p>
                 </div>
                 <div class = "eat-place">
                     <img src="images/france/feuillette.jpg" alt="Boulangerie Feuillette"><br>
-                    <p>Boulangerie Feuillette</p>
+                    <p>Boulangerie Feuillette</p><br>
                     <p>5 stars</p><br>
                     <p>Bakery</p>
                 </div>
                 <div class = "eat-place">
                     <img src="images/france/le428.jpg" alt="Le 428"><br>
-                    <p>Le 428</p>
+                    <p>Le 428</p><br>
                     <p>4 stars</p><br>
                     <p>French</p>
                 </div>
