--- a/iceland.html
+++ b/iceland.html
@@ -205,6 +205,15 @@
         height: 300px;
     }
 
+    .destination h4{
+            box-shadow: 0px 2.463px 4.187px 0px rgba(0, 0, 0, 0.00),
+                    0px 10.838px 8.67px 0px rgba(0, 0, 0, 0.01),
+                    0px 26.602px 17.292px 0px rgba(0, 0, 0, 0.01),
+                    0px 51.234px 33.893px 0px rgba(0, 0, 0, 0.01),
+                    0px 86.212px 62.319px 0px rgba(0, 0, 0, 0.02),
+                    0px 133.012px 106.41px 0px rgba(0, 0, 0, 0.02);
+    }
+
     .destination-content{
         align-self: flex-end;
         margin-left: 30px;
@@ -340,19 +349,19 @@
             <div class="do-places-img">
                 <div class="place">
                     <img src="Reykjavik2.jpg" alt="Reykjavik"><br>
-                    <p>Reykjavik</p>
+                    <p>Reykjavik</p><br>
                     <p>5 stars</p><br>
                     <p>City</p>
                 </div>
                 <div class="place">
                     <img src="waterfalls2.jpg" alt="Gullfoss Waterfall"><br>
-                    <p>Gullfoss Waterfall</p>
+                    <p>Gullfoss Waterfall</p><br>
                     <p>5 stars</p><br>
                     <p>Waterfalls
                     </div>
                     <div class="place">
                         <img src="nationapark.jpg" alt="national park Þingvellir"><br>
-                        <p>National Park Þingvellir</p>
+                        <p>National Park Þingvellir</p><br>
                         <p>5 stars</p><br>
                         <p>Nature</p>
                     </div>
@@ -367,19 +376,19 @@
                 <div class="eat-places-img">
                     <div class="eat-place">
                         <img src="images/laprima.jpg" object-fit="cover" alt="Skyr"><br>
-                        <p>La Primavera Ristorante</p>
+                        <p>La Primavera Ristorante</p><br>
                         <p>5 stars</p><br>
                         <p>Northern Italian</p>
                     </div>
                     <div class="eat-place">
                         <img src="images/brut.jpg" alt="Icelandic Lamb"><br>
-                        <p>Brut</p>
+                        <p>Brut</p><br>
                         <p>4 stars</p><br>
                         <p>Sea food</p>
                     </div>
                     <div class="eat-place">
-                        <img src="images/tides.jpg" alt="Rúgbrauð"><br>
-                        <p>Tide</p>
+                        <img src="tides.jpg" alt="Rúgbrauð"><br>
+                        <p>Tide</p><br>
                         <p>4 stars</p><br>
                         <p>International</p>
                     </div>
