--- a/nicaragua.html
+++ b/nicaragua.html
@@ -203,6 +203,15 @@
         height: 300px;
     }
 
+    .destination h4{
+            box-shadow: 0px 2.463px 4.187px 0px rgba(0, 0, 0, 0.00),
+                    0px 10.838px 8.67px 0px rgba(0, 0, 0, 0.01),
+                    0px 26.602px 17.292px 0px rgba(0, 0, 0, 0.01),
+                    0px 51.234px 33.893px 0px rgba(0, 0, 0, 0.01),
+                    0px 86.212px 62.319px 0px rgba(0, 0, 0, 0.02),
+                    0px 133.012px 106.41px 0px rgba(0, 0, 0, 0.02);
+    }
+
     .destination-content{
         align-self: flex-end;
         margin-left: 30px;
@@ -345,19 +354,19 @@
             <div class ="do-places-img">
                 <div class = "place">
                     <img src="images/nicaragua/volcano.jpg" alt="Masaya Volcano National Park"><br>
-                    <p>Masaya Volcano National Park</p>
+                    <p>Masaya Volcano National Park</p><br>
                     <p>5 stars</p><br>
                     <p>National Parks</p>
                 </div>
                 <div class = "place">
                     <img src="images/nicaragua/cathedral.jpg" alt="Cathedral-Basilica of Assumption of the Blessed Virgin Mary"><br>
-                    <p>Cathedral-Basilica of Assumption of the Blessed Virgin Mary</p>
+                    <p>Cathedral-Basilica of Assumption of the Blessed Virgin Mary</p><br>
                     <p>4 stars</p><br>
                     <p>Churches & Cathedrals</p>
                 </div>
                 <div class = "place">
                     <img src="images/nicaragua/islets.jpg" alt="Islets of Granada"><br>
-                    <p>Islets of Granada</p>
+                    <p>Islets of Granada</p><br>
                     <p>5 stars</p><br>
                     <p>Nature</p>
                 </div>
@@ -372,19 +381,19 @@
             <div class ="eat-places-img">
                 <div class = "eat-place">
                     <img src="images/nicaragua/restaurante.jpg" alt="Restaurante El Zaguan"><br>
-                    <p>Restaurante El Zaguan</p>
+                    <p>Restaurante El Zaguan</p><br>
                     <p>5 stars</p><br>
                     <p>Latin</p>
                 </div>
                 <div class = "eat-place">
                     <img src="images/nicaragua/bistro.jpg" alt="Bistro Estrada"><br>
-                    <p>Bistro Estrada</p>
+                    <p>Bistro Estrada</p><br>
                     <p>4 stars</p><br>
                     <p>International</p>
                 </div>
                 <div class = "eat-place">
                     <img src="images/nicaragua/nectar.jpg" alt="Nectar"><br>
-                    <p>Nectar</p>
+                    <p>Nectar</p><br>
                     <p>5 stars</p><br>
                     <p>Latin, Fine Dining</p>
                 </div>
