--- a/italy.html
+++ b/italy.html
@@ -203,6 +203,15 @@
         height: 300px;
     }
 
+    .destination h4{
+            box-shadow: 0px 2.463px 4.187px 0px rgba(0, 0, 0, 0.00),
+                    0px 10.838px 8.67px 0px rgba(0, 0, 0, 0.01),
+                    0px 26.602px 17.292px 0px rgba(0, 0, 0, 0.01),
+                    0px 51.234px 33.893px 0px rgba(0, 0, 0, 0.01),
+                    0px 86.212px 62.319px 0px rgba(0, 0, 0, 0.02),
+                    0px 133.012px 106.41px 0px rgba(0, 0, 0, 0.02);
+    }
+
     .destination-content{
         align-self: flex-end;
         margin-left: 30px;
@@ -340,19 +349,19 @@
             <div class="do-places-img">
                 <div class="place">
                     <img src="colosseum.jpg" alt="Colosseum"><br>
-                    <p>Colosseum</p>
+                    <p>Colosseum</p><br>
                     <p>5 stars</p><br>
                     <p>Landmarks</p>
                 </div>
                 <div class="place">
                     <img src="duomo.jpg" alt="Florence Cathedral (Duomo)"><br>
-                    <p>Florence Cathedral (Duomo)</p>
+                    <p>Florence Cathedral (Duomo)</p><br>
                     <p>5 stars</p><br>
                     <p>Landmarks</p>
                 </div>
                 <div class="place">
                     <img src="venice2.jpg" object-fit="cover" alt="Venice Canals"><br>
-                    <p>Venice Canals</p>
+                    <p>Venice Canals</p><br>
                     <p>5 stars</p><br>
                     <p>Landmarks</p>
                 </div>
@@ -367,19 +376,19 @@
             <div class="eat-places-img">
                 <div class="eat-place">
                     <img src="pizza.jpg" width="100%"; height="100%" alt="Authentic Italian Pizza"><br>
-                    <p>Orma Roma</p>
+                    <p>Orma Roma</p><br>
                     <p>5 stars</p><br>
                     <p>Italian</p>
                 </div>
                 <div class="eat-place">
                     <img src="gelato.jpg" width="100%"; height="100%" alt="Gelato"><br>
-                    <p>Gelato San Lorenzo</p>
+                    <p>Gelato San Lorenzo</p><br>
                     <p>5 stars</p><br>
                     <p>Dessert</p>
                 </div>
                 <div class="eat-place">
                     <img src="risotto.jpg"width="100%"; height="100%" alt="Risotto"><br>
-                    <p>Ratanà</p>
+                    <p>Ratanà</p><br>
                     <p>4 stars</p><br>
                     <p>Italian</p>
                 </div>
