--- a/japan.html
+++ b/japan.html
@@ -203,6 +203,15 @@
         height: 300px;
     }
 
+    .destination h4{
+            box-shadow: 0px 2.463px 4.187px 0px rgba(0, 0, 0, 0.00),
+                    0px 10.838px 8.67px 0px rgba(0, 0, 0, 0.01),
+                    0px 26.602px 17.292px 0px rgba(0, 0, 0, 0.01),
+                    0px 51.234px 33.893px 0px rgba(0, 0, 0, 0.01),
+                    0px 86.212px 62.319px 0px rgba(0, 0, 0, 0.02),
+                    0px 133.012px 106.41px 0px rgba(0, 0, 0, 0.02);
+    }
+
     .destination-content{
         align-self: flex-end;
         margin-left: 30px;
@@ -343,19 +352,19 @@
             <div class ="do-places-img">
                 <div class = "place">
                     <img src="images/japan/shrine.jpg" alt="Fushimi Inari-taisha Shrine"><br>
-                    <p>Fushimi Inari-taisha Shrine</p>
+                    <p>Fushimi Inari-taisha Shrine</p><br>
                     <p>5 stars</p><br>
                     <p>Historical Sites, Religious Sites</p>
                 </div>
                 <div class = "place">
                     <img src="images/japan/kinkakuji.jpg" alt="Kinkakuji Temple"><br>
-                    <p>Kinkakuji Temple</p>
+                    <p>Kinkakuji Temple</p><br>
                     <p>5 stars</p><br>
                     <p>Religious Sites</p>
                 </div>
                 <div class = "place">
                     <img src="images/japan/temple.jpg" alt="Senso-ji Temple"><br>
-                    <p>Senso-ji Temple</p>
+                    <p>Senso-ji Temple</p><br>
                     <p>5 stars</p><br>
                     <p>Religious Sites</p>
                 </div>
@@ -370,19 +379,19 @@
             <div class ="eat-places-img">
                 <div class = "eat-place">
                     <img src="images/japan/sushiryori.jpg" alt="Sushiryori Inose"><br>
-                    <p>Sushiryori Inose</p>
+                    <p>Sushiryori Inose</p><br>
                     <p>5 stars</p><br>
                     <p>Sushi</p>
                 </div>
                 <div class = "eat-place">
                     <img src="images/japan/kyubey.jpg" alt="Kyubey Ginza Honten"><br>
-                    <p>Kyubey Ginza Honten</p>
+                    <p>Kyubey Ginza Honten</p><br>
                     <p>4 stars</p><br>
                     <p>Sushi</p>
                 </div>
                 <div class = "eat-place">
                     <img src="images/japan/ramen.jpg" alt="Ramen Ibuki"><br>
-                    <p>Ramen Ibuki</p>
+                    <p>Ramen Ibuki</p><br>
                     <p>5 stars</p><br>
                     <p>Ramen</p>
                 </div>
@@ -395,7 +404,7 @@
         <div class="all-destinations">
             <div class="destination">
                 <div class="destination-content">
-                    <h4>Toyko</h4>
+                    <h4>Tokyo</h4>
                 </div>
             </div>
             <div class="destination">
