--- a/southafrica.html
+++ b/southafrica.html
@@ -203,6 +203,15 @@
         height: 300px;
     }
 
+    .destination h4{
+            box-shadow: 0px 2.463px 4.187px 0px rgba(0, 0, 0, 0.00),
+                    0px 10.838px 8.67px 0px rgba(0, 0, 0, 0.01),
+                    0px 26.602px 17.292px 0px rgba(0, 0, 0, 0.01),
+                    0px 51.234px 33.893px 0px rgba(0, 0, 0, 0.01),
+                    0px 86.212px 62.319px 0px rgba(0, 0, 0, 0.02),
+                    0px 133.012px 106.41px 0px rgba(0, 0, 0, 0.02);
+    }
+
     .destination-content{
         align-self: flex-end;
         margin-left: 30px;
@@ -345,19 +354,19 @@
             <div class ="do-places-img">
                 <div class = "place">
                     <img src="images/southafrica/lionshead.jpg" alt="Lion's Head"><br>
-                    <p>Lion's Head</p>
+                    <p>Lion's Head</p><br>
                     <p>4 stars</p><br>
                     <p>Mountains</p>
                 </div>
                 <div class = "place">
                     <img src="images/southafrica/penguins.jpg" alt="Boulder's Beach Penguin Colony"><br>
-                    <p>Boulder's Beach Penguin Colony</p>
+                    <p>Boulder's Beach Penguin Colony</p><br>
                     <p>4 stars</p><br>
                     <p>Nature</p>
                 </div>
                 <div class = "place">
                     <img src="images/southafrica/elephants.jpg" alt="Knysna Elephant Park"><br>
-                    <p>Knysna Elephant Park</p>
+                    <p>Knysna Elephant Park</p><br>
                     <p>5 stars</p><br>
                     <p>Nature</p>
                 </div>
@@ -372,19 +381,19 @@
             <div class ="eat-places-img">
                 <div class = "eat-place">
                     <img src="images/southafrica/sakhumzi.jpg" alt="Sakhumzi Restaurant"><br>
-                    <p>Sakhumzi Restaurant</p>
+                    <p>Sakhumzi Restaurant</p><br>
                     <p>5 stars</p><br>
                     <p>African, Fine Dining</p>
                 </div>
                 <div class = "eat-place">
                     <img src="images/southafrica/qunu.jpg" alt="Qunu Restaurant"><br>
-                    <p>Qunu Restaurant</p>
+                    <p>Qunu Restaurant</p><br>
                     <p>4 stars</p><br>
                     <p>International</p>
                 </div>
                 <div class = "eat-place">
                     <img src="images/southafrica/thelocalgrill.jpg" alt="The Local Grill"><br>
-                    <p>The Local Grill</p>
+                    <p>The Local Grill</p><br>
                     <p>5 stars</p><br>
                     <p>Steakhouse</p>
                 </div>
