--- a/nepal.html
+++ b/nepal.html
@@ -364,19 +364,19 @@
             </div>
             <div class="eat-places-img">
                 <div class="eat-place">
-                    <img src="images/nepal/utse.jpg" alt="Dal Bhat"><br>
+                    <img src="images/utse.jpg" alt="Dal Bhat"><br>
                     <p>Utse Restaurante</p>
                     <p>5 stars</p><br>
                     <p>Traditional Nepali</p>
                 </div>
                 <div class="eat-place">
-                    <img src="images/nepal/cafe.jpg" alt="Momos"><br>
+                    <img src="images/cafe.jpg" alt="Momos"><br>
                     <p>The Northfield Cafe</p>
                     <p>5 stars</p><br>
                     <p>Cafe</p>
                 </div>
                 <div class="eat-place">
-                    <img src="images/nepal/pagoda.jpg" alt="Newari Cuisine"><br>
+                    <img src="images/pagoda.jpg" alt="Newari Cuisine"><br>
                     <p>Eletric Pagoda Bar</p>
                     <p>4 stars</p><br>
                     <p>Cultural, Spicy</p>
