--- a/index.html
+++ b/index.html
@@ -410,21 +410,21 @@
         <h2>Top Destinations</h2>
         <div class="all-destinations">
             <div class="destination">
-                <img src="images/home/Vietnam.jpeg" alt="Vietnam">
-                <p>Vietnam</p>
-                <p><b>$35/day</b></p><br>
+                <img src="images/home/bali.jpeg" alt="Bali">
+                <p>Bali</p>
+                <p><b>$76/day</b></p><br>
                 <p>10 Days Trip</p>
             </div>
             <div class="destination">
-                <img src="images/home/Srilanka.jpeg" alt="Sri Lanka">
-                <p>Sri Lanka</p>
-                <p><b>$35/day</b></p><br>
+                <img src="images/home/Iceland.jpeg" alt="Iceland">
+                <p>Iceland</p>
+                <p><b>$293/day</b></p><br>
                 <p>9 Days Trip</p>
             </div>
             <div class="destination">
-                <img src="images/home/Georgia.jpeg" alt="Georgia">
-                <p>Georgia</p>
-                <p><b>$30/day</b></p><br>
+                <img src="images/home/Japan.jpeg" alt="Japan">
+                <p>Japan</p>
+                <p><b>$125/day</b></p><br>
                 <p>7 Days Trip</p>
             </div>
         </div>
