--- a/index.html
+++ b/index.html
@@ -410,19 +410,19 @@
         <h2>Top Destinations</h2>
         <div class="all-destinations">
             <div class="destination">
-                <img src="images/home/bali.jpeg" alt="Bali">
+                <img src="images/home/bali1.png" alt="Bali">
                 <p>Bali</p>
                 <p><b>$76/day</b></p><br>
                 <p>10 Days Trip</p>
             </div>
             <div class="destination">
-                <img src="images/home/Iceland.jpeg" alt="Iceland">
+                <img src="images/home/iceland1.png" alt="Iceland">
                 <p>Iceland</p>
                 <p><b>$293/day</b></p><br>
                 <p>9 Days Trip</p>
             </div>
             <div class="destination">
-                <img src="images/home/Japan.jpeg" alt="Japan">
+                <img src="images/home/japan1.png" alt="Japan">
                 <p>Japan</p>
                 <p><b>$125/day</b></p><br>
                 <p>7 Days Trip</p>
