--- a/currency-rate.html
+++ b/currency-rate.html
@@ -271,7 +271,9 @@
         }
 
         .right-section img {
-            width: 0;
+        width: 80%; 
+        height: auto; 
+        margin-left: 30px;
         }
 
         .currency-calculator {
@@ -333,7 +335,7 @@
             </div>
         </div>
         <div class="right-section">
-            <img src="money.png">
+            <img src="currencies.png">
         </div>
     </div>
 
