--- a/index.html
+++ b/index.html
@@ -410,10 +410,12 @@
         <h2>Top Destinations</h2>
         <div class="all-destinations">
             <div class="destination">
+              <div class="baliDest">
                 <img src="images/home/bali1.png" alt="Bali">
                 <p>Bali</p>
                 <p><b>$76/day</b></p><br>
                 <p>10 Days Trip</p>
+              </div>
             </div>
             <div class="destination">
                 <img src="images/home/iceland1.png" alt="Iceland">
@@ -429,6 +431,12 @@
             </div>
         </div>
     </div>
+
+    <script>
+      baliDest.addEventListener('click', function () {
+            window.location.href = 'https://moizeshenriques.github.io/travelwise/bali.html';            
+        });
+    </script>
 
     <div class="testimonials-section">
         <div class="testimonial-heading">
