--- a/nepal.html
+++ b/nepal.html
@@ -343,7 +343,7 @@
                     <p>Adventure</p>
                 </div>
                 <div class="place">
-                    <img src="images/phewalake.jpg" alt="Phewa Lake"><br>
+                    <img src="images/phewlake.jpg" alt="Phewa Lake"><br>
                     <p>Phewa Lake</p>
                     <p>5 stars</p><br>
                     <p>Nature, Relaxation</p>
@@ -376,7 +376,7 @@
                     <p>Cafe</p>
                 </div>
                 <div class="eat-place">
-                    <img src="images/pagoda.jpg" alt="Newari Cuisine"><br>
+                    <img src="images/pagodabar.jpg" alt="Newari Cuisine"><br>
                     <p>Eletric Pagoda Bar</p>
                     <p>4 stars</p><br>
                     <p>Cultural, Spicy</p>
